--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
                 Добавить проект
               </a>
 
-              <a href="#" class="controls__prijects-type-btn controls__btn">
+              <a href="add-type-projects.html" class="controls__prijects-type-btn controls__btn">
                 Типы проектов
               </a>
 
               <a href="#" class="controls__tile-btn controls__btn">
-
+                <span class="vis-hidd">кнопка переключения вид поиткой</span>
               </a>
 
               <a href="#" class="controls__row-btn controls__btn controls__btn--active">
-
+                <span class="vis-hidd">кнопка переключения вид рядами</span>
               </a>
 
               <a href="#" class="controls__exp-xls controls__btn controls__btn--disabled">
